# VideoPlayer

./: .gitignore  CMakeLists.txt  audioplayer.cpp  audioplayer.h  ctrlbar.cpp  ctrlbar.h  ctrlbar.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  overlaycombobox.cpp  overlaycombobox.h  player.cpp  player.h  playlistwidget.cpp  playlistwidget.h  videoslider.cpp  videoslider.h  videowidget.cpp  videowidget.h  yuv420pframe.cpp  yuv420pframe.h
